
syntax = "proto3";
package nm_ipc;

service NativeMessagingIPC  {
    rpc SwitchActivity(SwitchActivityRequest) returns (SwitchActivityResponse) {}
}

message SwitchActivityRequest {
    string url = 1;
    optional bytes icon = 2;
    optional uint32 width = 3;
    optional uint32 height = 4;
}

message SwitchActivityResponse {}
