syntax = "proto3";
package ipc;

service TauriIPC {
    rpc GetAssets(AssetRequest) returns (AssetResponse) {}
    rpc GetAssetsStreaming(stream AssetRequest) returns (stream AssetResponse) {}
    rpc GetSnapshots(AssetRequest) returns (AssetResponse) {}
}

message AssetRequest {}

message AssetResponse {
    string kind = 1;
    bytes content = 2;
}


